# PiperScript

./: Cargo.toml  README.md  reloadanton.sh
benchmarking/: bench.sh  bench_compare.sh  bench_fib.las  bench_fib.py  bench_stat.sh  bench_test.las  flamegraph.sh
benchmarking/examples/: bench_fib.las  parse_bench.las
benchmarking/scripts/: build_bench.sh
crates/filerunner/: Cargo.toml
crates/filerunner/src/: lib.rs
crates/filerunner/tests/: error_message_test.rs  test_error.las
crates/interpreter/: Cargo.toml  README.md
crates/interpreter/src/: compiler.rs  eval.rs  lib.rs  parser.rs  test_util.rs  vm.rs
crates/interpreter/tests/: builtins.rs
crates/piper/: Cargo.toml
crates/piperfmt/: Cargo.toml  README.md
crates/repl/: Cargo.toml
crates/son_of_anton/: Cargo.toml  README.md
crates/son_of_anton/src/: capabilites.rs  document_store.rs  lib.rs  logging.rs  lsp.rs  main.rs  rpc.rs
crates/son_of_anton/src/handlers/: completion.rs  hover.rs
crates/son_of_anton/src/lsp/: diagnostics.rs  document_change.rs  document_open.rs  formatting.rs  initialize.rs
interpreter/src/: eval.rs  lib.rs  parser.rs  test_util.rs
interpreter/tests/: builtins.rs  common.rs  language_features.rs
lexer/src/: lexer.rs  lib.rs  token.rs
parser/: Cargo.toml
parser/src/: assign_statement.rs  ast.rs  expression_parser.rs  lib.rs  parse_errors.rs  parser.rs  return_statement.rs  test_util.rs
piper/: Cargo.toml
piper/src/: main.rs
piperscript/: Cargo.toml
piperscript/src/: args.rs  main.rs
repl/: Cargo.toml
repl/src/: lib.rs  main.rs
son_of_anton/: Cargo.toml
son_of_anton/src/: capabilites.rs  lib.rs  main.rs
son_of_anton/src/handlers/: completion.rs
(+71 files in other folders)
